modified the texts on the landing page

--- a/src/web/static/wbr.html
+++ b/src/web/static/wbr.html
@@ -56,9 +56,8 @@
 									aggregator</p>
 							</div>
 						</div>
-						<div class="card-body" style="padding-left: 28px; padding-bottom: 84px; text-align:center">
-							<p class="card-text" style="color:#051B38; font-size:larger">You'll upload a new one every
-								week.</p>
+						<div class="card-body" style="padding-left: 28px; padding-bottom: 112px; text-align:center">
+							<p class="card-text" style="color:#051B38; font-size:larger">Upload a new one every week.</p>
 						</div>
 					</div>
 				</div>
@@ -79,7 +78,7 @@
 							</div>
 						</div>
 						<div class="card-body" style="padding-left: 28px;">
-							<p class="card-text" style="color:#051B38; font-size:larger">You'll upload this once.</p>
+							<p class="card-text" style="color:#051B38; font-size:larger; text-align: center;">Update the week_ending and week_number in your configuration file, then upload.</p>
 							<p class="card-text" style="color:#768EAA">You can always upload a new when you want to
 								update a structure of your report</p>
 						</div>
