Changes: Modified the yaml configuration on top of Olalekan's changes for metric aliasing, Added support to specify csv files in the yaml itself. Because uploading the data file in the application is set for removal in the next version. The db connections file's configuration changes with loading the database configuration from aws secret manager, in the next version we will release support for azure and google cloud too. Generating the YAML file using the csv file is changed instead of uploading the csv file, user now upload a YAML configuration with only setup and data source section, the application will load the data and based on the environments it will generate a YAML config that plots all the metrics on the WBR report. Modified README.md with the latest changes and documentation.
Features:
Support to add noteworthy events annotation for the wbr block in the report

--- a/src/web/static/wbr.html
+++ b/src/web/static/wbr.html
@@ -335,7 +335,8 @@
 					<div id="form">
 						<form>
 							<div class="form-group">
-								<label>Upload the csv file here </label><input type="file" id="data1">
+                                <label>Upload the data sources config file(YAML) here </label><input id="data1"
+                                                                                                     type="file">
 							</div>
 						</form>
 					</div>
